refactor(Order Domains): migrate JDBC to JPA